Updated all changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Fantastic Homemade Lasagna</a>
+    <a href="recipes/lasagne.html">Fantastic Homemade Lasagne</a>
 </body>
 </html>
