--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
     <a href="recipes/lasagne.html">Fantastic Homemade Lasagne</a>
-    <a href="recipes/afmeatballs.html">Air Fryer Meatballs</a>
+    <a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs</a>
     <a href="recipes/creamy-chicken-pasta.html">Creamy Chicken Pasta</a>
+    </ul>
 </body>
 </html>
