--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -8,9 +8,9 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Air Fryer Meatballs</h1>
-    <img src="../images/air-fryer-meatballs.jpg" alt="Picture of finished air fryer meatball recipe" height="750" width="1000">
+    <img src="../images/air-fryer-meatballs.jpg" alt="Picture of finished air fryer meatball recipe" height="500" width="750">
     <h2>About this recipe</h2>
-    <p>Cook these sausage and beef meatballs in an air-fryer for ease. Serve with tomato sauce and pasta or enjoy in a meatball sub</p>
+    <p>Cook these sausage and beef meatballs in an air-fryer for ease. Serve with tomato sauce and pasta or enjoy in a meatball sub.</p>
     <h2>Ingredients List</h2>
     <ul>
         <li>4 good-quality sausages</li>
