--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -24,7 +24,7 @@
         <li>125g ball mozzarella</li>
     </ul>
 
-    <h2>How to make:</h2>
+    <h3>How to make:</h3>
     <ol>
         <li>To make the meat sauce, heat 2 tbsp olive oil in a frying pan and cook 750g lean beef mince in two batches for about 10 mins until browned all over.</li>
         <li>Finely chop 4 slices of prosciutto from a 90g pack, then stir through the meat mixture.</li>
@@ -34,7 +34,7 @@
         <li>Spoon one third of the meat sauce into the dish, then cover with some fresh lasagne sheets from a 300g pack. Drizzle over roughly 130g ready-made or homemade white sauce.</li>
         <li>Repeat until you have three layers of pasta. Cover with the remaining 390g white sauce, making sure you can’t see any pasta poking through.</li>
         <li>Scatter 125g torn mozzarella over the top.</li>
-        <li>Arrange the rest of the prosciutto on top. Bake for 45 mins until the top is bubbling and lightly browned</li>
+        <li>Arrange the rest of the prosciutto on top. Bake for 45 mins until the top is bubbling and lightly browned.</li>
     </ol>
 
 </body>
