Adding all files to latest commit

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <a href="recipes/lasagne.html">Fantastic Homemade Lasagne</a>
-    <a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs</a>
-    <a href="recipes/creamy-chicken-pasta.html">Creamy Chicken Pasta</a>
+        <li><a href="recipes/lasagne.html">Fantastic Homemade Lasagne</a></li>
+        <li><a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs</a></li>
+        <li><a href="recipes/creamy-chicken-pasta.html">Creamy Chicken Pasta</a></li>
     </ul>
 </body>
 </html>
