Redone website with new style

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        ul {
+  list-style-type: none;
+    }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagne.html">Fantastic Homemade Lasagne</a></li>
-        <li><a href="recipes/air-fryer-meatballs.html">Air Fryer Meatballs</a></li>
-        <li><a href="recipes/creamy-chicken-pasta.html">Creamy Chicken Pasta</a></li>
+    <h1 class="main title">Odin Recipes</h1>
+    <hr></hr>
+    <img class="main-image" src="images/chef.jpg" alt="Picture of muppets chef" height="auto" width="500px">
+    <p class="welcome text">Welcome to the Odin Recipes website! New recipes are added each week.</p>
+    <p class="welcome text">Please see below our current list of recipes for you to try out:</p>
+    <ul class="recipe-links">
+        <li><a class="links" href="recipes/lasagne.html" target="_blank" rel="noopener noreferrer">Fantastic Homemade Lasagne</a></li>
+        <li><a class="links" href="recipes/air-fryer-meatballs.html" target="_blank" rel="noopener noreferrer">Air Fryer Meatballs</a></li>
+        <li><a class="links" href="recipes/creamy-chicken-pasta.html" target="_blank" rel="noopener noreferrer">Creamy Chicken Pasta</a></li>
     </ul>
 </body>
 </html>
