--- a/recipes/air-fryer-meatballs.html
+++ b/recipes/air-fryer-meatballs.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Fryer Meatballs</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Air Fryer Meatballs</h1>
-    <img src="../images/air-fryer-meatballs.jpg" alt="Picture of finished air fryer meatball recipe" height="500" width="750">
-    <h2>About this recipe</h2>
+    <a href="../index.html">Return to home page</a>
+    <h1 class="main title">Odin Recipes</h1>
+    <hr></hr>
+    <h2 class="title">Air Fryer Meatballs</h2>
+    <img class="recipe-image" src="../images/air-fryer-meatballs.jpg" alt="Picture of finished air fryer meatball recipe" height="500" width="750">
+    <h3 class="title">About this recipe</h3>
     <p>Cook these sausage and beef meatballs in an air-fryer for ease. Serve with tomato sauce and pasta or enjoy in a meatball sub.</p>
-    <h2>Ingredients List</h2>
-    <ul>
+    <h3 class="title">Ingredients List</h3>
+    <ul class="ingredients">
         <li>4 good-quality sausages</li>
         <li>500g beef mince</li>
         <li>1/2 onion</li>
@@ -22,7 +25,7 @@
         <li>1 egg</li>
     </ul>
 
-    <h2>How to make:</h2>
+    <h3 class="title">How to make:</h3>
     <ol>  
     <li>Squeeze the sausagemeat out of the skins into a bowl, then tip in the remaining ingredients, plus a good pinch of salt and a few cracks of black pepper. Mix everything well – this is easiest to do with your hands giving everything a good squeeze together. This part is very important as the better combined the ingredients are, the less likely the meatballs are to fall apart during cooking.</li>
     <li>Roll the mixture into 20-25 balls. Transfer to a tray or plate, then chill for 20 mins.</li>
