--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Fantastic Homemade Lasagna Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Fantastic Homemade Lasagne</h1>
-    <img src="../images/lasagne.jpg" alt="Picure of finished lasagna recipe" height="500" width="750">
-    <h2>About this recipe</h2> 
-    <p>Prepare this easy homemade lasagne ahead of time and save in the freezer, uncooked, for when you need it during a busy week. Just bake for an extra 45 mins</p>
-    <h3>Ingredients List</h3>
-    <ul>
+    <a href="../index.html">Return to home page</a>
+    <h1 class="main title">Odin Recipes</h1>
+    <hr></hr>
+    <h2 class="sub title">Fantastic Homemade Lasagne</h2>
+    <img class="recipe-image" src="../images/lasagne.jpg" alt="Picure of finished lasagna recipe" height="500" width="750">
+    <h3 class="title">About this recipe</h3> 
+    <p>Prepare this easy homemade lasagne ahead of time and save in the freezer, uncooked, for when you need it during a busy week. Just bake for an extra 45 mins.</p>
+    <h3 class="title">Ingredients List</h3>
+    <ul class="ingredients">
         <li>50ml of olive oil</li>
         <li>750g lean beef mince</li>
         <li>90g pack proscuitto</li>
@@ -24,7 +27,7 @@
         <li>125g ball mozzarella</li>
     </ul>
 
-    <h3>How to make:</h3>
+    <h3 class="title">How to make:</h3>
     <ol>
         <li>To make the meat sauce, heat 2 tbsp olive oil in a frying pan and cook 750g lean beef mince in two batches for about 10 mins until browned all over.</li>
         <li>Finely chop 4 slices of prosciutto from a 90g pack, then stir through the meat mixture.</li>
