--- a/recipes/creamy-chicken-pasta.html
+++ b/recipes/creamy-chicken-pasta.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+             ul {
+  list-style-type: disc;
+    }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creamy Chicken Pasta</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Air Fryer Meatballs</h1>
-    <img src="../images/creamy__chicken_pasta_.jpg" alt="Picture of creamy chicken pasta recipe" height="500" width="750">
-    <h2>About this recipe</h2>
+    <a href="../index.html">Return to home page</a>
+    <h1 class="main title">Odin Recipes</h1>
+    <hr></hr>
+    <h2 class="sub title">Creamy Chicken Pasta</h2>
+    <img class="recipe-image" src="../images/creamy__chicken_pasta_.jpg" alt="Picture of creamy chicken pasta recipe" height="500" width="750">
+    <h3 class="title">About this recipe</h3>
     <p>Try our crowd-pleasing creamy chicken pasta for your next family meal. It's packed with flavour and is easy for anyone to make, including children.</p>
-    <h2>Ingredients List</h2>
-    <ul>
+    <h3 class="title">Ingredients List</h3>
+    <ul class="ingredients">
         <li>300g of dried penne</li>
         <li>2 tsp olive oil</li>
         <li>1 garlic clove</li>
@@ -24,8 +32,8 @@
         <li>small bunch of parsley</li>
     </ul>
 
-    <h2>How to make:</h2>
-    <ol>  
+    <h3 class="title">How to make:</h3>
+    <ol> 
     <li>Cook the pasta following pack instructions. Reserve 100ml of the water and drain the pasta in a colander.</li>
     <li>Meanwhile, heat the oil in a frying pan on a medium heat and fry the garlic and spinach for 3 mins until wilted. Add the soft cheese and heat until melted. Stir in most of the parmesan, then add the shredded chicken, peas and some of the pasta water. Bring to the boil and bubble for 2-3 mins until the chicken and peas are completely heated through.</li>
     <li>Add the pasta and stir until combined. Add more pasta water to loosen the sauce, if needed. Remove from heat, sprinkle over the remaining parmesan and parsley or basil to serve.</li>
